<resources>
    <string name="app_name">Yosh Olimlar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Bosh Sahifa</string>
    <string name="menu_meetings">Seminarlar</string>
    <string name="menu_savants">Yosh Olimlar</string>
    <string name="news_1">31 may kuni Iqtisodiy taraqqiyot va kambag‘allikni qisqartirish vazirligida, vazirning birinchi o‘rinbosari Ilhom Norqulov Birlashgan Millatlar Tashkilotining Bolalar jamg‘armasi (UNICEF) vakillari...</string>
    <string name="news_2">Uchrashuvning asosiy mavzusi koronavirus pandemiyasining O‘zbekistondagi...</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mavzuni_kiriting">Mavzuni kiriting..</string>
    <string name="rasim_linkini_kiriting">Rasim linkini kiriting..</string>
    <string name="korfrensiya_linkini_kiriting">Korfrensiya linkini kiriting..</string>
    <string name="_00_00">00:00</string>
    <string name="_00_00_0000">00-00-0000</string>
    <string name="add_meet">Add Meet</string>
    <string name="yangilik_qo_shish">Yangilik qo\'shish</string>
    <string name="ismini_kiriting">Ismini kiriting</string>
    <string name="sohasini_kiriting">Sohasini kiriting..</string>
    <string name="asosiy_qismini_kiriting">Asosiy qismini kiriting</string>
    <string name="add">Ma\'lumot qo\'shish</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>