<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.yosholimlar.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_meetings"
        android:name="com.example.yosholimlar.ui.gallery.MeetingsFragment"
        android:label="@string/menu_meetings"
        tools:layout="@layout/fragment_meetings" />

    <fragment
        android:id="@+id/nav_savants"
        android:name="com.example.yosholimlar.ui.slideshow.PersonsFragment"
        android:label="@string/menu_savants"
        tools:layout="@layout/fragment_persons" />
</navigation>